<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_sun" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/incident_detail"
        android:textColor="@android:color/white"
        android:textSize="21dp"
        tools:context=".MainActivity" />

    <RelativeLayout
        android:id="@+id/bottom_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_margin="10dp"
        android:background="@drawable/dialog_background" >

        <LinearLayout
            android:id="@+id/no_id"
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <TextView
            android:id="@+id/lbl_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:text="@string/latitude"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/ButtonTextColor" />

        <TextView
            android:id="@+id/lbl_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_latitude"
            android:layout_marginLeft="15dp"
            android:paddingBottom="5dp"
            android:text="@string/longitude"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/ButtonTextColor" />

        <TextView
            android:id="@+id/txt_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lbl_latitude"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="3dp"
            android:text="@string/txt_longitude_str"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/DialogBackdropColor" />

        <TextView
            android:id="@+id/txt_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lbl_longitude"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="3dp"
            android:layout_toLeftOf="@+id/txt_longitude"
            android:text="@string/txt_latitude_str"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/DialogBackdropColor" />
    </RelativeLayout>

    <TextView
        android:id="@+id/commets"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/bottom_info"
        android:layout_margin="15dp"
        android:background="@drawable/dialog_background"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/DialogBackdropColor" />

    <Button
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/commets"
        android:background="@drawable/button_blue"
        android:onClick="onClick"
        android:layout_margin="15dp"
        android:text="@string/accept" />
    
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/commets"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_blue"
        android:onClick="onClick"
        android:layout_margin="15dp"
        android:text="@string/cancel" />

    <ImageView
        android:id="@+id/link"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/accept"
        
        android:layout_margin="15dp"
        android:contentDescription="@string/no"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/DialogBackdropColor" />

</RelativeLayout>