<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_sun" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/button_blue"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/myreport"
            android:textColor="@android:color/black"
            android:textSize="21dp"
            android:textStyle="bold" />
  		<Button
                android:id="@+id/locmap"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/title"
                android:layout_margin="5dp"
                android:background="@drawable/button_blue"
                android:onClick="onClick"
                android:text="@string/loctionfrommap"
                android:textColor="@android:color/white"
                android:textStyle="bold" >
            </Button>
        <RelativeLayout
            android:id="@+id/RelativeLayout_1_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locmap"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/dialog_background"
            android:paddingBottom="10dp" >

         
          

        

                <LinearLayout
                    android:id="@+id/no_id"
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <EditText
                    android:id="@+id/ed_lat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/latitude"
                    android:inputType="numberDecimal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/ButtonTextColor" />

                <EditText
                    android:id="@+id/ed_lon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/longitude"
                    android:inputType="numberDecimal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/ButtonTextColor" />
            </RelativeLayout>

           
        


        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/RelativeLayout_1_2"
            android:layout_margin="15dp"
            android:background="@drawable/button_blue"
            android:onClick="onClick"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textStyle="bold" >
        </Button>

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/RelativeLayout_1_2"
            android:layout_margin="15dp"
            android:background="@drawable/button_blue"
            android:onClick="onClick"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textStyle="bold" >
        </Button>
    </RelativeLayout>

</ScrollView>